  - Provide a native backend for AmazonDrive
* Merged in lp:~breunigs/duplicity/amazondrive2
  - Fixed variable renaming issue
* Fixed bug #1642098 - does not create PAR2 archives when '--par2-options' is used
  - Missing space between par2-options plus default options
* Fix bug using 40-char sign keys, from Richard McGraw on mail list
  - Remove truncation of argument and adjust comments


New in v0.7.08 (2016/07/02)
---------------------------
* Merged in lp:~noizyland/duplicity/fix_azurebackend_typo
  - Fix typo in error handling code
* Merged in lp:~ghoz/duplicity/swift-prefix
  - adds the abiliy to use path in the swift backend, in order to have multiple
    backups to the same container neatly organized.
* Fixed bug #1573957 with patches from Dmitry Nezhevenko
  - upload last chunk with files_upload_session_finish to avoid extra request
  - upload small files using non-chunked api
* Fixed bug #1586934 with patches from Dmitry Nezhevenko
  - fixes error handling in wrapper
* Fixed bug #1586992 with patches from Dmitry Nezhevenko
  - Patch adds _delete_list to Par2Backend. And _delete_list fallbacks to
    _delete calls if wrapped backend has no _delete_list.
* Fixed bug #1589038 with patches from Malte Schröder
  - Added ignore_case option to selection functions
* Merged in lp:~mstoll-de/duplicity/b2-reauth
  - Fixes bug #1588503 b2: large uploads fail due to expired auth token
* Merged in lp:~aaron-whitehouse/duplicity/fix_pep8
  - Fix PEP8 error in onedrivebackend.py (space before bracket)
* Fixed bug #822697 ssh-options not passed in rsync over ssh
  - Added globals.ssh_options to rsync command line
* Increased default volume size to 200M, was 25M
* Fixed README-REPO to no longer mention 0.6-series
* Merged in lp:~aaron-whitehouse/duplicity/fix_stat_errors
  - Only give an error about not being able to access possibly locked file if
    that file is supposed to be included or scanned (i.e. not excluded).
    Fixes Bug #1089131